[tool.poetry]
name = "gloomraven"
version = "0.1.0"
description = ""
authors = ["Jelle"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.10.4"
pre-commit = "^4.0.1"
pylint = "^3.3.2"
pydantic-settings = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
